<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#FFFFFF"
    tools:context=".WelcomeActivity">

    <!-- Heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_details"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingBottom="20dp"
        android:gravity="center" />

    <!-- Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underScore"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <!-- Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underScore"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp" />

</LinearLayout>
